Fixed spacing of collage

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,6 +176,7 @@ section:not(.divider){
     align-items: start;
 }
 
+
 #pure_marlborough,
 #climate {
     grid-template-columns: 2fr 3fr;
@@ -185,10 +186,13 @@ section:not(.divider){
     grid-template-columns: 2fr 4fr;
 }
 
+#quality,
 #zero {
     grid-template-columns: 4fr 2fr;
 }
 
+#quality > div > img,
+#pure_marlborough > div > img,
 #climate > div > img,
 #zero > div > img {
     height: 500px;
@@ -196,10 +200,6 @@ section:not(.divider){
     object-fit: cover;
 }
 
-#quality{
-    justify-items: flex-end;
-    grid-template-columns: 1fr 1fr;
-}
 
 .rightarrows{
     text-align: right;
@@ -241,9 +241,7 @@ section:not(.divider){
 #collage_inner{
     display: grid;
     column-gap: 2px;
-    row-gap: 2px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
 }
 
 #collage_inner img{
@@ -254,6 +252,10 @@ section:not(.divider){
 
 #collage_inner div:last-child{
     grid-column: 1/3;
+}
+
+#collage_inner div:last-child img{
+    height: 400px;
 }
 
 footer {
